[package]
name = "akita-planner"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Offline schedule planner for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-config = { version = "0.1.0", path = "../akita-config", optional = true, default-features = false, features = [
  "all-schedules",
] }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-schedules = { version = "0.1.0", path = "../akita-schedules", default-features = false }
akita-types = { version = "0.1.0", path = "../akita-types" }

[features]
default = []
catalog-gen = ["dep:akita-config"]

[[bin]]
name = "gen_schedule_tables"
path = "src/bin/gen_schedule_tables.rs"
required-features = ["catalog-gen"]

[lints]
workspace = true
