[package]
name = "akita-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Protocol description layer (identifiers, per-stage formulas, per-level plan) for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-sumcheck = { version = "0.1.0", path = "../akita-sumcheck" }
akita-types = { version = "0.1.0", path = "../akita-types" }

[dev-dependencies]
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }

[features]
default = []
parallel = [
  "akita-field/parallel",
  "akita-sumcheck/parallel",
  "akita-types/parallel",
]

[lints]
workspace = true
