[package]
name = "akita-prover"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Prover-facing APIs for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-sumcheck = { version = "0.1.0", path = "../akita-sumcheck" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
akita-types = { version = "0.1.0", path = "../akita-types" }
aes = "0.8.4"
ctr = "0.9.2"
rand_core = "0.6"
rayon = { version = "1.12", optional = true }
sha3 = "0.10.8"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"

[features]
default = []
parallel = ["dep:rayon", "akita-field/parallel", "akita-sumcheck/parallel"]
zk = ["akita-types/zk", "rand_core/getrandom"]

[lints]
workspace = true
