[package]
name = "akita-prover"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Prover-facing APIs for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-config = { version = "0.1.0", path = "../akita-config", default-features = false }
jolt-field = { version = "=0.1.0", git = "https://github.com/Acentelles/jolt.git", rev = "09b2f7b6ddd9427c756b781c39530a6c005e332d", default-features = false, features = ["solinas"] }
akita-error = { version = "0.1.0", path = "../akita-error" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-sumcheck = { version = "0.1.0", path = "../akita-sumcheck" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
akita-types = { version = "0.1.0", path = "../akita-types" }
aes = "0.8.4"
ctr = "0.9.2"
rand_core = "0.6"
rayon = { version = "1.10", optional = true }
sha3 = "0.10.8"
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
akita-config = { version = "0.1.0", path = "../akita-config", features = [
  "test-support",
] }

[features]
default = ["schedules-default"]
schedules-default = ["akita-config/schedules-default"]
logging-transcript = ["akita-transcript/logging-transcript"]
parallel = [
  "dep:rayon",
  "akita-challenges/parallel",
  "jolt-field/parallel",
  "akita-sumcheck/parallel",
  "akita-types/parallel",
]

[lints]
workspace = true
