[package]
name = "akita-r1cs"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
    "Quang Dao <qvd@andrew.cmu.edu>",
    "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
    "Omid Bodaghi <omibo@layerzero.foundation>",
    "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Deferred R1CS relation helpers for Akita ZK verification"
repository = "https://github.com/LayerZero-Labs/hachi"
readme = "../../README.md"

[dependencies]
akita-field = { version = "0.1.0", path = "../akita-field" }
tracing = "0.1"

[features]
default = []
zk = ["akita-field/zk"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
