[package]
name = "akita-scheme"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
    "Quang Dao <qvd@andrew.cmu.edu>",
    "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
    "Omid Bodaghi <omibo@layerzero.foundation>",
    "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "End-to-end Akita PCS scheme orchestration"
repository = "https://github.com/LayerZero-Labs/hachi"
readme = "../../README.md"

[features]
default = []
planner = [
    "akita-config/planner",
    "akita-setup/planner",
]
parallel = [
    "dep:rayon",
    "akita-algebra/parallel",
    "akita-field/parallel",
    "akita-prover/parallel",
    "akita-setup/parallel",
    "akita-verifier/parallel",
]
zk = [
    "akita-config/zk",
    "akita-prover/zk",
    "akita-setup/zk",
    "akita-types/zk",
    "akita-verifier/zk",
]

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-config = { version = "0.1.0", path = "../akita-config" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-prover = { version = "0.1.0", path = "../akita-prover" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-setup = { version = "0.1.0", path = "../akita-setup" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
akita-types = { version = "0.1.0", path = "../akita-types" }
akita-verifier = { version = "0.1.0", path = "../akita-verifier" }
rayon = { version = "1.10", optional = true }
tracing = "0.1"

[dev-dependencies]
akita-planner = { version = "0.1.0", path = "../akita-planner" }
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
