[package]
name = "akita-serialization"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
    "Quang Dao <qvd@andrew.cmu.edu>",
    "Omid Bodaghi <omibo@layerzero.foundation>",
]
license = "Apache-2.0 OR MIT"
description = "Serialization traits for the Akita polynomial commitment scheme"
repository = "https://github.com/a16z/hachi"
readme = "../../README.md"

[dependencies]
akita-derive = { version = "0.1.0", path = "../akita-derive" }
thiserror = "2.0"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
