[package]
name = "akita-sumcheck"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Generic sumcheck machinery for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-r1cs = { version = "0.1.0", path = "../akita-r1cs", optional = true }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
rayon = { version = "1.10", optional = true }
tracing = "0.1"

[features]
default = []
parallel = ["dep:rayon", "akita-algebra/parallel", "akita-field/parallel"]
zk = [
  "dep:akita-r1cs",
  "akita-algebra/zk",
  "akita-field/zk",
  "akita-r1cs/zk",
  "akita-transcript/zk",
]

[lints]
workspace = true
