[package]
name = "akita-sumcheck"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Generic sumcheck machinery for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
tracing = "0.1"

[features]
default = []
parallel = ["akita-algebra/parallel", "akita-field/parallel"]
zk = ["akita-algebra/zk", "akita-transcript/zk"]

[lints]
workspace = true
