[package]
name = "akita-transcript"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
    "Quang Dao <qvd@andrew.cmu.edu>",
    "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
    "Omid Bodaghi <omibo@layerzero.foundation>",
    "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Fiat-Shamir transcripts for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
spongefish = { git = "https://github.com/arkworks-rs/spongefish", rev = "d2d190b1329d35ac9577438d05aed4f17a57b9f9", default-features = false }

[features]
default = ["transcript-blake2b"]
logging-transcript = []
transcript-blake2b = ["spongefish/blake2", "spongefish/sha3"]
transcript-keccak = ["spongefish/keccak", "spongefish/sha3"]
zk = ["akita-field/zk"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
