[package]
name = "akita-transcript"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Fiat-Shamir transcripts for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
blake2 = "0.10.6"
spongefish = { git = "https://github.com/arkworks-rs/spongefish", rev = "d2d190b1329d35ac9577438d05aed4f17a57b9f9", default-features = false, features = [
  "yolocrypto",
] }

[features]
default = ["transcript-blake2b"]
logging-transcript = []
# spongefish 0.7 imports StdHash from its prover/verifier/domain modules
# even when Akita selects Blake2b or Keccak explicitly, so sha3 is required
# for the crate to compile with default-features disabled.
transcript-blake2b = ["spongefish/blake2", "spongefish/sha3"]
transcript-keccak = ["spongefish/keccak", "spongefish/sha3"]

[lints]
workspace = true
