[package]
name = "akita-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Shared protocol data types for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/akita"
readme = "../../README.md"

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-sumcheck = { version = "0.1.0", path = "../akita-sumcheck" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
blake2 = "0.10.6"
tracing = "0.1"

[features]
default = []
zk = []

[dev-dependencies]
rand = "0.8"

[lints]
workspace = true
