[package]
name = "akita-verifier"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
    "Markos Georghiades <mgeorghiades@a16z.com>",
    "Quang Dao <qvd@andrew.cmu.edu>",
    "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
    "Omid Bodaghi <omibo@layerzero.foundation>",
    "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Verifier-facing API surface for the Akita polynomial commitment scheme"
repository = "https://github.com/LayerZero-Labs/hachi"
readme = "../../README.md"

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-sumcheck = { version = "0.1.0", path = "../akita-sumcheck" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
akita-types = { version = "0.1.0", path = "../akita-types" }
tracing = "0.1"

[features]
default = ["new_approach"]
parallel = ["akita-algebra/parallel", "akita-field/parallel"]
zk = ["akita-types/zk"]
# When enabled, the verifier computes `w_d` and `t_b` via the per-row
# materialised-`Eval` algorithm described in `docs/mflat-eval-fusion.md` §9
# (a.k.a. §11.2). Enabled by default; opt out with `--no-default-features`
# to use the legacy streamed `WMatrixRowsEvaluator` / `TMatrixRowsEvaluator`
# path.
new_approach = []

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
