[package]
name = "akita-zk"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = [
  "Markos Georghiades <mgeorghiades@a16z.com>",
  "Quang Dao <qvd@andrew.cmu.edu>",
  "Amirhossein Khajehpour <amir.kh@layerzerolabs.org>",
  "Omid Bodaghi <omibo@layerzero.foundation>",
  "Giuseppe Vitto <giuseppe.vitto@layerzerolabs.org>",
]
license = "Apache-2.0 OR MIT"
description = "Experimental zero-knowledge protocols for Akita"
repository = "https://github.com/LayerZero-Labs/hachi"
readme = "../../README.md"

[dependencies]
akita-algebra = { version = "0.1.0", path = "../akita-algebra" }
akita-challenges = { version = "0.1.0", path = "../akita-challenges" }
akita-field = { version = "0.1.0", path = "../akita-field" }
akita-serialization = { version = "0.1.0", path = "../akita-serialization" }
akita-transcript = { version = "0.1.0", path = "../akita-transcript" }
rand_chacha = { version = "0.10", optional = true }
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = { version = "1.12", optional = true }

[dev-dependencies]
rand = "0.8"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[features]
default = ["parallel"]
parallel = ["dep:rand_chacha", "dep:rayon", "akita-field/parallel"]
